KSENROLL-4687 HCAL Collection table is misaligned on the page in View ACal - fixed as linked KSENROLL-4581
git-svn-id: https://svn.kuali.org/repos/student/enrollment/ks-enroll/trunk@41758 0ac02d80-fb3f-11dc-a574-c57244a850eb

--- a/ks-enroll-web/src/main/webapp/ks-enroll/css/enroll.css
+++ b/ks-enroll-web/src/main/webapp/ks-enroll/css/enroll.css
@@ -209,6 +209,11 @@ a
     margin-bottom: 0px;
 }
 
+.ac_disclosure .uif-boxLayoutHorizontalItem
+{
+    float: none;
+}
+
 .error_403
 {
     margin: 100px auto;
